wallet_core/tests_integration/tests/snapshots/gba_pid@000009878.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 000009878"
expression: attributes
---
com.example.pid__given_name:
  String: Hendrik
com.example.pid__family_name:
  String: Derks
com.example.pid__own_family_name:
  String: Derks
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1967-04-04
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "000009878"
com.example.address__resident_street:
  String: Eemhavenweg
com.example.address__resident_house_number:
  String: "18"
com.example.address__resident_postal_code:
  String: 3089KG
com.example.address__resident_city:
  String: Rotterdam
com.example.address__resident_country:
  String: Nederland
