wallet_core/tests_integration/tests/snapshots/gba_pid@010245741.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 225
description: "BSN: 010245741"
expression: attributes
---
given_name:
  String: Karin
family_name:
  String: Koolmees
own_family_name:
  String: Koolmees
gender:
  Gender: Female
birth_date:
  Date: 2000-10-31
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: false
bsn:
  String: "010245741"
resident_street:
  String: Trompenburgstraat
resident_house_number:
  String: "2"
resident_postal_code:
  String: 1079TX
resident_city:
  String: Amsterdam
resident_country:
  String: Nederland
