wallet_core/tests_integration/tests/snapshots/gba_pid@010755561.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 010755561"
expression: attributes
---
com.example.pid__given_name:
  String: Karel
com.example.pid__family_name:
  String: Koolmees
com.example.pid__own_family_name:
  String: Koolmees
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 2001-12-31
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "010755561"
com.example.address__resident_street:
  String: Trompenburgstraat
com.example.address__resident_house_number:
  String: "2"
com.example.address__resident_postal_code:
  String: 1079TX
com.example.address__resident_city:
  String: Amsterdam
com.example.address__resident_country:
  String: Nederland
