wallet_core/tests_integration/tests/snapshots/gba_pid@999990160.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 174
description: "BSN: 999990160"
expression: attributes
---
com.example.pid__given_name:
  String: Hendrik Jan Coenraad Maurits
com.example.pid__family_name:
  String: den Brinck
com.example.pid__own_family_name:
  String: den Brinck
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1971-12-13
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__has_spouse_or_partner:
  Boolean: false
com.example.pid__bsn:
  String: "999990160"
com.example.address__resident_street:
  String: St.-Jacobsstraat
com.example.address__resident_house_number:
  String: "1"
com.example.address__resident_postal_code:
  String: 3511BR
com.example.address__resident_city:
  String: Utrecht
com.example.address__resident_country:
  String: Nederland
