wallet_core/tests_integration/tests/snapshots/gba_pid@999990196.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 173
description: "BSN: 999990196"
expression: attributes
---
com.example.pid__given_name:
  String: Anna Maria Petra
com.example.pid__family_name:
  String: Wesseling
com.example.pid__own_family_name:
  String: Wesseling
com.example.pid__gender:
  Gender: Female
com.example.pid__birth_date:
  Date: 1945-04-18
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999990196"
com.example.address__resident_street:
  String: Eemhavenweg
com.example.address__resident_house_number:
  String: "20"
com.example.address__resident_postal_code:
  String: 3089KG
com.example.address__resident_city:
  String: Rotterdam
com.example.address__resident_country:
  String: Nederland
