wallet_core/tests_integration/tests/snapshots/gba_pid@999990500.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 176
description: "BSN: 999990500"
expression: attributes
---
given_name:
  String: Paula
family_name:
  String: Vlag-Prins
own_family_name:
  String: Prins
gender:
  Gender: Female
birth_date:
  Date: 1962-05-28
age_over_18:
  Boolean: true
has_spouse_or_partner:
  Boolean: true
bsn:
  String: "999990500"
resident_street:
  String: Looijerstraat
resident_house_number:
  String: "13"
resident_postal_code:
  String: 2512CK
resident_city:
  String: "'s-Gravenhage"
resident_country:
  String: Nederland
