wallet_core/tests_integration/tests/snapshots/gba_pid@999990871.snap
---
source: tests_integration/tests/gba_pid_test.rs
assertion_line: 184
description: "BSN: 999990871"
expression: attributes
---
com.example.pid__given_name:
  String: Petri
com.example.pid__family_name:
  String: Vornowski
com.example.pid__gender:
  Gender: Male
com.example.pid__birth_date:
  Date: 1994-07-04
com.example.pid__age_over_18:
  Boolean: true
com.example.pid__bsn:
  String: "999990871"
com.example.address__resident_street:
  String: Prinsengracht
com.example.address__resident_house_number:
  String: "27"
com.example.address__resident_postal_code:
  String: 2512EW
com.example.address__resident_city:
  String: "'s-Gravenhage"
com.example.address__resident_country:
  String: Nederland
